# sensor-sim-framework

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
include/: isensor.h  math_utils.h  sensor_manager.h
src/: dummy_sensor.cpp  math_utils.cpp  sensor_manager.cpp
test/: test_math_utils.cpp  test_sensor.cpp  test_sensor_manager.cpp
